style alignment fix

--- a/src/style.css
+++ b/src/style.css
@@ -227,10 +227,15 @@ dd {
 }
 
 .shopItem {
-  display: flex;
-  align-items: center;
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between;
   cursor: pointer;
   user-select: none;
+}
+.shopItem > div {
+  display: flex;
+  align-items: center;
 }
 
 span {
@@ -253,7 +258,6 @@ span {
 }
 
 .turretCost{
-  margin-left: 70px;
   text-decoration: underline;
 }
 
